k8s/app_frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
